--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -4044,7 +4044,7 @@ A_i =\frac{i_L}{i_i}=-30 =-120 \left(\frac{R_c}{R_c+R_L}\right) \left(\frac{r_{b
 \begin{align}
 \frac{1}{4}=\left(\frac{R_c}{R_c+1000}\right) \left(\frac{r_{be}}{r_{be}+5000 \mathbin{\|} R_1 \mathbin{\|} R_2} \right)
 \end{align}
-حاصل ہوتا ہے۔ایسی وہ تمام قیمتیں جو اس مساوات پر پورا اتریں درست جواب ہیں۔آئیں ہم دونوں قوصین کی قیمتیں برابر رکھ کر دیکھیں۔ایسا کرنے سے عموماً قابل قبول جوابات حاصل ہوتے ہیں۔یوں
+حاصل ہوتا ہے۔ایسی وہ تمام قیمتیں جو اس مساوات پر پورا اتریں درست جواب ہیں۔آئیں ہم دونوں قوسین کی قیمتیں برابر رکھ کر دیکھیں۔ایسا کرنے سے عموماً قابل قبول جوابات حاصل ہوتے ہیں۔یوں
 \begin{align*}
 \frac{1}{2}&=\left(\frac{R_c}{R_c+1000}\right)\\
 \frac{1}{2}&=\left(\frac{r_{be}}{r_{be}+5000 \mathbin{\|} R_1 \mathbin{\|} R_2} \right)
