--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -1271,28 +1271,28 @@ R_{of}=\left. R_{of}'\right|_{R_L \to \infty} =\frac{R_s+r_{be}}{\beta}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{voltageSeriesTwoStageAmplifier}
-\caption{دو درجہ زنجیری واپسی برقی دباو ایمپلیفائر}
+\caption{دو مرحلہ زنجیری واپسی برقی دباو ایمپلیفائر}
 \label{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر}
 \end{figure}
 اس ایمپلیفائر میں خارجی برقی دباو \عددیء{V_o} سے واپسی اشارہ \عددیء{V_f} حاصل کیا گیا ہے لہٰذا بنیادی ایمپلیفائر کے داخلی جانب کا دور حاصل کرتے وقت خارجی نقطے  کو قصر دور کیا جائے گا۔چونکہ \عددیء{V_o} کو  \عددیء{R_L} پر ناپا جاتا ہے لہٰذا خارجی نقطے  کو قصر دور کرنے سے مراد اس نقطے  کو برقی زمین کے ساتھ جوڑنا ہے۔شکل \حوالہ{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_داخلی_حصہ} الف میں ایسا دکھایا گیا ہے۔جیسا کہ شکل  ب میں دکھایا گیا ہے، اس عمل سے \عددیء{R_{f1}} اور \عددیء{R_{f2}} متوازی جڑ جاتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{voltageSeriesTwoStageAmplifierA}
-\caption{دو درجہ زنجیری واپسی برقی دباو ایمپلیفائر کے داخلی حصے کا حصول}
+\caption{دو مرحلہ زنجیری واپسی برقی دباو ایمپلیفائر کے داخلی حصے کا حصول}
 \label{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_داخلی_حصہ}
 \end{figure}
 اس ایمپلیفائر میں \عددیء{V_f} اور \عددیء{V_s} سلسلہ وار جڑے ہیں لہٰذا بنیادی ایمپلیفائر کے خارجی جانب کا دور حاصل کرتے وقت داخلی دائرے کو کھلے دور کیا جائے گا۔اس دائرے کو \عددیء{Q_1} کے بیس یا اس کے ایمٹر پر کھلے دور کیا جا سکتا ہے۔شکل \حوالہ{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_خارجی_حصہ} الف  میں داخلی دائرے کو \عددیء{Q_1} کے ایمٹر پر کھلے دور کیا گیا ہے۔جیسا کہ شکل  ب میں دکھایا گیا ہے، اس عمل سے \عددیء{R_{f1}} اور \عددیء{R_{f2}} خارجی جانب سلسلہ وار جڑ جاتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{voltageSeriesTwoStageAmplifierB}
-\caption{دو درجہ زنجیری واپسی برقی دباو ایمپلیفائر کے خارجی حصے کا حصول}
+\caption{دو مرحلہ زنجیری واپسی برقی دباو ایمپلیفائر کے خارجی حصے کا حصول}
 \label{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_خارجی_حصہ}
 \end{figure}
 %
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{voltageSeriesTwoStageAmplifierC}
-\caption{دو درجہ زنجیری واپسی برقی دباو ایمپلیفائر کا بنیادی ایمپلیفائر}
+\caption{دو مرحلہ زنجیری واپسی برقی دباو ایمپلیفائر کا بنیادی ایمپلیفائر}
 \label{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_بنیادی}
 \end{figure}
 شکل \حوالہ{شکل_واپسی_دو_درجہ_واپسی_برقی_دباو_ایمپلیفائر_بنیادی} کو زنجیری ضرب سے با آسانی حل کرتے ہوئے \عددیء{A_v} حاصل کی جا سکتی ہے۔اسی  طرح اس بنیادی ایمپلیفائر کا \عددیء{R_i} اور \عددیء{R_o} بھی حاصل کیا جا سکتا ہے۔شکل سے واپس کار کا \عددیء{W} یوں حاصل ہوتا ہے۔
