--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -2263,7 +2263,7 @@ B_n(s)&=\left(s+\omega_0 \right)\left(s^2+2 \zeta_1 \omega_0 s+\omega_0^2 \right
 
 \عددیء{s+\omega_0=0} سے \عددیء{s=-\omega_0} حاصل ہوتا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_تسلسل_کے_صفر} الف میں \اصطلاح{مخلوط سطح}\فرہنگ{مخلوط سطح}\حاشیہب{complex plane}\فرہنگ{complex plane} پر اس نقطے کو دکھایا گیا ہے۔مخلوط سطح کے افقی محور پر حقیقی اعداد جبکہ اس کے عمودی محور پر خیالی اعداد پائے جاتے ہیں۔یوں \عددیء{s=\sigma+j \omega} لکھتے ہوئے \عددیء{\sigma} کو افقی جبکہ \عددیء{j \omega} کو عمودی محور پر رکھا جائے گا۔
 
-دو درجی قلیات
+دو درجی کلیات
 \begin{align}\label{مساوات_تعددی_ردعمل_دو_درجی_عمومی_جزو}
 s^2+2 \zeta_m \omega_0 s +\omega_0^2=0
 \end{align}
@@ -2433,18 +2433,18 @@ s^2+2 \zeta s+1=s^2+1.4142s+1
 \end{align*}
 ہوں گے۔
 
-جدول \حوالہ{جدول_تعددی_ردعمل_بٹرورت_قلیات} میں \عددیء{\omega_0 \ne 1} لیتے ہوئے پہلے درجے  بٹر ورت فلٹر کے کلیہ      کو
+جدول \حوالہ{جدول_تعددی_ردعمل_بٹرورت_قلیات} میں \عددیء{\omega_0 \ne 1} لیتے ہوئے رتبہ اول  بٹر ورت فلٹر کے کلیہ      کو
 \begin{align}\label{مساوات_تعددی_بٹرورت_پہلا_درجہ}
 \frac{A(s)}{A_0}=\frac{1}{\left(\frac{s}{\omega_0}\right)+1}
 \end{align}
-جبکہ دو درجی بٹر ورت فلٹر کے کلیہ      کو
+جبکہ دو رتبی بٹر ورت فلٹر کے کلیہ      کو
 \begin{align}\label{مساوات_تعددی_بٹرورت_دوسرا_درجہ}
 \frac{A(s)}{A_0}=\frac{1}{\left(\frac{s}{\omega_0} \right)^2+2 \zeta \left(\frac{s}{\omega_0} \right)+1}
 \end{align}
 لکھا جا سکتا ہے۔
 
 \جزوحصہ{بٹر ورت فلٹر کا دور}
-شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} الف میں پہلے درجے کا پست گزار بٹر ورت فلٹر دکھایا گیا ہے۔اس کو دیکھتے ہوئے
+شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} الف میں رتبہ اول پست گزار بٹر ورت فلٹر دکھایا گیا ہے۔اس کو دیکھتے ہوئے
 \begin{align*}
 v_k&=\left(\frac{\frac{1}{sC}}{R+\frac{1}{sC}} \right) v_i=\frac{v_i}{sRC+1}\\
 v_o&=\left(1+\frac{R_2}{R_1} \right)v_k
@@ -2464,7 +2464,7 @@ A_0&=1+\frac{R_2}{R_1}
 \begin{align*}
 \frac{A(s)}{A_0}=\frac{1}{\left(\frac{s}{\omega_0}\right)+1}
 \end{align*}
-حاصل ہوتا ہے۔اس کا مساوات \حوالہ{مساوات_تعددی_بٹرورت_پہلا_درجہ} کے ساتھ سے موازنہ کریں جو پہلے درجے کی بٹر ورت فلٹر کی مساوات ہے۔آپ دیکھ سکتے ہیں کہ شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} الف پہلے درجے کا بٹر ورت فلٹر ہے۔\عددیء{R} اور \عددیء{C} کی جگہیں آپس میں تبدیل کرنے سے پہلے درجے کا بلند گزار بٹر ورت فلٹر حاصل ہوتا ہے۔ایک درجی بٹر ورت فلٹر میں \عددیء{A_0} کی قیمت کچھ بھی رکھی جا سکتی ہے۔عموماً \عددیء{A_0} کو استعمال کرتے ہوئے اشارہ بڑھایا جاتا ہے۔
+حاصل ہوتا ہے۔اس کا مساوات \حوالہ{مساوات_تعددی_بٹرورت_پہلا_درجہ} کے ساتھ سے موازنہ کریں جو یک رتبی بٹر ورت فلٹر کی مساوات ہے۔آپ دیکھ سکتے ہیں کہ شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} الف یک رتبی بٹر ورت فلٹر ہے۔\عددیء{R} اور \عددیء{C} کی جگہیں آپس میں تبدیل کرنے سے یک رتبی بلند گزار بٹر ورت فلٹر حاصل ہوتا ہے۔یک رتبی بٹر ورت فلٹر میں \عددیء{A_0} کی قیمت کچھ بھی رکھی جا سکتی ہے۔عموماً \عددیء{A_0} کو استعمال کرتے ہوئے اشارہ بڑھایا جاتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{butterworthImplementation}
@@ -2473,7 +2473,7 @@ A_0&=1+\frac{R_2}{R_1}
 \end{figure}
 %
 
-آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دوسرے درجے کے بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرخوف کے قانون برائے برقی رو کی مدد سے
+آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دو رتبی بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 \frac{v_1-v_i}{Z_1}+\frac{v_1}{Z_3+Z_4}+\frac{v_1-v_o}{Z_2}=0
 \end{align*}
@@ -2514,15 +2514,15 @@ A_0&=3-2 \zeta
 %====================
 
 \ابتدا{مثال}
-ایک ایسا چار درجی بلند گزار بٹر ورت فلٹر تخلیق دیں جس کی \عددیء{f_L=\SI{200}{\hertz}} ہو۔
+ایک ایسا چار رتبی بلند گزار بٹر ورت فلٹر تخلیق دیں جس کی \عددیء{f_L=\SI{200}{\hertz}} ہو۔
 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{butterworthFourthOrderHighPassImplementation}
-\caption{چار درجی بلند گزار بٹر ورت فلٹر}
+\caption{چار رتبی بلند گزار بٹر ورت فلٹر}
 \label{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_بلند_گزار}
 \end{figure}
-حل:شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_پست_بلند_گزار} طرز کے دو کڑیاں زنجیری شکل میں جوڑ کر چار درجی بلند گزار فلٹر حاصل ہو گا۔ جدول \حوالہ{جدول_تعددی_ردعمل_بٹرورت_قلیات} سے چار درجی فلٹر کے
+حل:شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_پست_بلند_گزار} طرز کے دو کڑیاں زنجیری شکل میں جوڑ کر چار رتبی بلند گزار فلٹر حاصل ہو گا۔ جدول \حوالہ{جدول_تعددی_ردعمل_بٹرورت_قلیات} سے چار رتبی فلٹر کے
 \begin{align*}
 \zeta_1&=\frac{0.765}{2}=0.3825\\
 \zeta_2&=\frac{1.848}{2}=0.924
@@ -2794,6 +2794,6 @@ r_{be}&=\frac{\beta V_T}{I_{CQ}}
 \caption{بٹر ورت فلٹر کا سوال}
 \label{شکل_تعددی_ردعمل_سوال_تین_درجی_بٹر_ورت_فلٹر}
 \end{figure}
-جوابات: یہ تین درجی \عددیء{f_H=\SI{500}{\hertz}} کا پست گزار فلٹر ہے۔پہلی کڑی \عددیء{\SI{5.7}{\volt \per \volt}} کی افزائش بھی فراہم کرتی ہے۔
+جوابات: یہ تین رتبی \عددیء{f_H=\SI{500}{\hertz}} کا پست گزار فلٹر ہے۔پہلی کڑی \عددیء{\SI{5.7}{\volt \per \volt}} کی افزائش بھی فراہم کرتی ہے۔
 \انتہا{سوال}
 %========================
