--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -1728,7 +1728,7 @@ k_n&=k_p
 
 اب تصور کریں کہ ڈرین \عددی{D} پر معمولی مثبت برقی دباو \عددی{v_{DS}} لاگو کیا جاتا ہے۔\عددی{n} راہ میں برقی رو \عددی{i_{DS}} گزرے گی جس کی قیمت اُوہم کے قانون سے حاصل کی جا سکتی ہے۔\عددی{v_{DS}} کو کم یا زیادہ کرتے ہوئے \عددی{i_{DS}} کو کم یا زیادہ کرنا ممکن ہے۔کم \عددی{v_{DS}} پر، کسی بھی مزاحمت کی طرح، برقی دباو بالمقابل برقی رو کا خط تقریباً سیدھا ہو گا۔اب تصور کریں کہ \عددی{v_{GS}} کو تبدیل کئے بغیر \عددی{v_{DS}} کو بڑھایا جائے۔یوں \عددی{n} راہ کے سورس سرے پر \عددی{0 V} جبکہ اس کے ڈرین سرے پر \عددی{v_{DS}} برقی دباو پائی جائے گی۔جیسا شکل  ب میں دکھایا گیا ہے، یوں سورس سرے کے قریب \عددی{pn} جوڑ پر ویران خطے کی چوڑائی کم جبکہ ڈرین سرے کے قریب ویران خطے کی چوڑائی زیادہ ہو گی۔ان دو سروں کے درمیان ویران خطے کی چوڑائی ترچھی شکل اختیار کرے گی۔اس ترچھا پن کی وجہ سے \عددی{n} راہ کی مزاحمت بڑھے گی جس سے راہ کا مزاحمت بھی بڑھے گا۔یوں اگرچہ کم \عددی{v_{DS}} پر \عددی{v_{DS}-i_{DS}} کا خط سیدھا ہو گا لیکن جیسے جیسے \عددی{v_{DS}} بڑھایا جائے، راہ کا مزاحمت ایسے ایسے بڑھے گا اور یوں \عددی{v_{DS}-i_{DS}} کے خط میں جھکاو پیدا ہو گا۔اگر  \عددی{v_{DS}} کو بتدریج بڑھایا جائے تو آخر کار ڈرین سرے کی جانب ویران خطہ بڑھتے بڑھتے راہ کو دبوچ جائے گا۔شکل  ب میں ایسا ہوتے دکھایا گیا ہے۔\عددی{v_{DS}} کو مزید بڑھانے سے برقی رو میں تبدیلی نہیں پیدا ہوتی اور اس کی قیمت نقطہ دبوچ پر پائے جانے والے برقی رو کے قیمت پر ہی رہتی ہے۔
 
-مندرجہ بالا تذکرے سے ظاہر ہے کہ \تحریر{JFET} بالکل گھٹاتا ماسفیٹ کی مانند کام کرتا ہے۔البتہ جہاں ماسفیٹ کے گیٹ پر مثبت یا منفی برقی دباو دینا ممکن ہے، \تحریر{nJFET} کے گیٹ پر صرف منفی برقی دباو ہی دینا ممکن ہے۔اگر اس کے گیٹ پر مثبت برقی دباو دی جائے تو گیٹ اور راہ کے مابین \عددی{pn} جوڑ یعنی یہاں کا ڈایوڈ سیدھا مائل ہو جائے گا اور گیٹ \تحریر{nJFET} کو قابو کرنے کی صلاحیت کھو دے گا۔چونکہ \تحریر{JFET} کے گیٹ پر ڈایوڈ کو الٹا مائل رکھا جاتا ہے لہٰذا اس کے گیٹ پر نہایت کم (الٹے مائل ڈایوڈ کے برابر) برقی رو پائی جاتی ہے جسے عموماً صفر ایمپیئر تصور کیا جاتا ہے۔یہ برقی رو اگرچہ نہایت کم ہے لیکن ماسفیٹ کے گیٹ پر اس سے بھی کئی درجے کم برقی رو پائی جاتی ہے۔
+مندرجہ بالا تذکرے سے ظاہر ہے کہ \تحریر{JFET} بالکل گھٹاتا ماسفیٹ کی مانند کام کرتا ہے۔البتہ جہاں ماسفیٹ کے گیٹ پر مثبت یا منفی برقی دباو دینا ممکن ہے، \تحریر{nJFET} کے گیٹ پر صرف منفی برقی دباو ہی دینا ممکن ہے۔اگر اس کے گیٹ پر مثبت برقی دباو دی جائے تو گیٹ اور راہ کے مابین \عددی{pn} جوڑ یعنی یہاں کا ڈایوڈ سیدھا مائل ہو جائے گا اور گیٹ \تحریر{nJFET} کو قابو کرنے کی صلاحیت کھو دے گا۔چونکہ \تحریر{JFET} کے گیٹ پر ڈایوڈ کو الٹا مائل رکھا جاتا ہے لہٰذا اس کے گیٹ پر نہایت کم (الٹے مائل ڈایوڈ کے برابر) برقی رو پائی جاتی ہے جسے عموماً صفر ایمپیئر تصور کیا جاتا ہے۔یہ برقی رو اگرچہ نہایت کم ہے لیکن ماسفیٹ کے گیٹ پر اس سے بھی کئی گنا کم برقی رو پائی جاتی ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nJFEToperation}
