--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -454,7 +454,7 @@ g_m \left ( \frac{n_1}{n_2}\right)&=\frac{1}{R}=\left(\frac{n_1}{n_2} \right)^2 
 \begin{align*}
 g_m R_p&=\frac{n_1}{n_2}
 \end{align*}
-حاصل ہوتا ہے۔چونکہ \عددیء{R_B} کی قیمت \عددیء{r_{be}} کے قیمت سے کئی درجے زیادہ ہوتی ہے لہٰذا
+حاصل ہوتا ہے۔چونکہ \عددیء{R_B} کی قیمت \عددیء{r_{be}} کے قیمت سے کئی درجہ زیادہ ہوتی ہے لہٰذا
 \begin{align*}
 R_p=\frac{R_B r_{be}}{R_B+r_{be}} \approx r_{be}
 \end{align*}
@@ -744,7 +744,7 @@ g_m R_m&=\frac{C_2}{C_1'}
 \begin{align} \label{مساوات_مرتعش_قلم_رکاوٹ}
 Z=\frac{-j \left(\omega^2 -\omega_s^2 \right)}{\omega C'  \left(\omega^2 -\omega_m^2 \right)}
 \end{align}
-اس مساوات کو شکل \حوالہ{شکل_مرتعش_داب_برقی_قلم} پ میں گراف کیا گیا ہے۔حقیقت میں \عددیء{C'} کی قیمت \عددیء{C} کے قیمت سے کئی درجے زیادہ ہوتی ہے (یعنی \عددیء{C' \gg C})۔یوں \عددیء{C_m} کی قیمت \عددیء{C} سے قدر کم  ہوتا ہے جس سے \عددیء{\omega_s} کی قیمت \عددیء{\omega_m} کے قیمت سے قدر کم ہوتا ہے۔ان دو قدرتی گمکی تعدد کی قیمتوں میں \عددیء{1 \%} سے بھی کم فرق ہوتا ہے۔مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} میں دیا برقی رکاوٹ \عددیء{\omega_s < \omega < \omega_m} کے حدود میں بطور امالہ جبکہ \عددیء{\omega< \omega_s} یا \عددیء{\omega>\omega_m} کے حدود میں بطور کپیسٹر  کردار ادا کرتا ہے۔
+اس مساوات کو شکل \حوالہ{شکل_مرتعش_داب_برقی_قلم} پ میں گراف کیا گیا ہے۔حقیقت میں \عددیء{C'} کی قیمت \عددیء{C} کے قیمت سے کئی درجہ زیادہ ہوتی ہے (یعنی \عددیء{C' \gg C})۔یوں \عددیء{C_m} کی قیمت \عددیء{C} سے قدر کم  ہوتا ہے جس سے \عددیء{\omega_s} کی قیمت \عددیء{\omega_m} کے قیمت سے قدر کم ہوتا ہے۔ان دو قدرتی گمکی تعدد کی قیمتوں میں \عددیء{1 \%} سے بھی کم فرق ہوتا ہے۔مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} میں دیا برقی رکاوٹ \عددیء{\omega_s < \omega < \omega_m} کے حدود میں بطور امالہ جبکہ \عددیء{\omega< \omega_s} یا \عددیء{\omega>\omega_m} کے حدود میں بطور کپیسٹر  کردار ادا کرتا ہے۔
 
 مندرجہ بالا تذکرے کو مدِ نظر رکھتے ہوئے ہم دیکھتے ہیں کہ کالپٹس مرتعش میں امالہ کی جگہ قلم استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_مرتعش_کالپٹس} میں ایسا کرتے ہوئے  شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} الف کا \اصطلاح{کالپٹس قلمی مرتعش} حاصل ہوتا ہے۔چونکہ قلم صرف \عددیء{\omega_s < \omega < \omega_m} حدود میں بطور امالہ کردار ادا کرتا ہے لہٰذا ایسا مرتعش صرف اور صرف انہیں حدود کے درمیان ارتعاش پذیر رہ سکتا ہے اور اس کی تعدد انہیں حدود کے درمیان رہے گی۔آپ دیکھ سکتے ہیں کہ \اصطلاح{قلمی مرتعش}\فرہنگ{قلمی مرتعش}\فرہنگ{مرتعش!قلمی}\فرہنگ{crystal oscillator}\حاشیہب{crystal oscillator} کی تعدد صرف اور صرف قلم کی قدرتی گمکی تعدد پر منحصر ہے۔اب چونکہ \عددیء{\omega_s \approx \omega_m} ہوتا ہے لہٰذا حقیقت میں ایسے مرتعش کی  \عددیء{\omega \approx \omega_s \approx \omega_m} رہے گی۔چونکہ مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} بھی اس مرتعش کی تعدد دیتا ہے لہٰذا قلمی مرتعش اپنی تعدد \عددیء{\omega_s} اور \عددیء{\omega_m} کے درمیان اس جگہ برقرار رکھے گا جہاں مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} سے حاصل قلم کی  برقی رکاوٹ (یعنی \عددیء{L}) کو استعمال کرتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} سے بھی یہی تعدد حاصل ہو۔قلمی مرتعش کے استعمال کا مقصد ایک حتمی تعدد حاصل کرنا ہے جو قلم کو \عددیء{\omega_s \approx \omega_m} حدود میں استعمال کرتے حاصل ہوتا ہے ۔
 
