--- a/tex/myUrduCommandsEMT.tex
+++ b/tex/myUrduCommandsEMT.tex
@@ -73,6 +73,7 @@
 \renewcommand*{\thefigure}{\arabic{figure}.\thechapter}
 \renewcommand*{\thetable}{\arabic{table}.\thechapter}
 \renewcommand*{\theequation}{\arabic{equation}.\thechapter}
+%\renewcommand*{\theequation}{\thechapter .\arabic{equation}}
 \renewcommand*{\thesection}{\arabic{section}.\thechapter}
 \renewcommand*{\thesubsection}{\arabic{subsection}.\arabic{section}.\thechapter}
 \renewcommand*{\thesubsubsection}{\arabic{subsubsection}.\arabic{subsection}.\arabic{section}.\thechapter}
