--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -74,7 +74,8 @@
 %numbering scheme
 \renewcommand*{\thefigure}{\arabic{figure}.\thechapter}
 \renewcommand*{\thetable}{\arabic{table}.\thechapter}
-\renewcommand*{\theequation}{\arabic{equation}.\thechapter}
+%\renewcommand*{\theequation}{\arabic{equation}.\thechapter}
+\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
 \renewcommand*{\thesection}{\arabic{section}.\thechapter}
 \renewcommand*{\thesubsection}{\arabic{subsection}.\arabic{section}.\thechapter}
 \renewcommand*{\thesubsubsection}{\arabic{subsubsection}.\arabic{subsection}.\arabic{section}.\thechapter}
