--- a/tex/myUrduCommandsEMT.tex
+++ b/tex/myUrduCommandsEMT.tex
@@ -39,7 +39,7 @@
 
 %references and labels
 \newcommand*{\شناخت}[1]{\label{#1}}
-\newcommand*{\حوالہ}[1]{\ref{#1}}
+\newcommand*{\حوالہ}[1]{{\beginR \ref{#1}\endR}}
 \newcommand*{\حوالہصفحہ}[1]{\pageref{#1}}
 
 %counters
