--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -40,7 +40,7 @@
 
 %references and labels
 \newcommand*{\شناخت}[1]{\label{#1}}
-\newcommand*{\حوالہ}[1]{\beginL\ref{#1}\endL}
+\newcommand*{\حوالہ}[1]{\ref{#1}}
 \newcommand*{\حوالہصفحہ}[1]{\pageref{#1}}
 
 %counters
@@ -74,8 +74,7 @@
 %numbering scheme
 \renewcommand*{\thefigure}{\arabic{figure}.\thechapter}
 \renewcommand*{\thetable}{\arabic{table}.\thechapter}
-%\renewcommand*{\theequation}{\arabic{equation}.\thechapter}
-\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
+\renewcommand*{\theequation}{\arabic{equation}.\thechapter}
 \renewcommand*{\thesection}{\arabic{section}.\thechapter}
 \renewcommand*{\thesubsection}{\arabic{subsection}.\arabic{section}.\thechapter}
 \renewcommand*{\thesubsubsection}{\arabic{subsubsection}.\arabic{subsection}.\arabic{section}.\thechapter}
