--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -88,7 +88,7 @@
 \renewcommand{\theexamplecounter}{\arabic{examplecounter}.\thechapter}
 
 \newenvironment*{مثال}
-{\noindent\ignorespaces \vspace{\baselineskip} \hrule \vspace{\baselineskip}  مثال \refstepcounter{examplecounter} \theexamplecounter :}%
+{\noindent\ignorespaces \vspace{\baselineskip} \hrule \vspace{\baselineskip}  مثال \refstepcounter{examplecounter} \theexamplecounter :\quad}%
 {\par\noindent \hrule  \vspace{\baselineskip}}
 
 %------
@@ -98,7 +98,7 @@
 \renewcommand{\thepracticecounter}{\arabic{practicecounter}.\thechapter}
 
 \newenvironment*{مشق}
-{\noindent\ignorespaces \vspace{\baselineskip} \hrule \vspace{\baselineskip} مشق \refstepcounter{practicecounter} \thepracticecounter :}%
+{\noindent\ignorespaces \vspace{\baselineskip} \hrule \vspace{\baselineskip} مشق \refstepcounter{practicecounter} \thepracticecounter :\quad}%
 {\par\noindent \hrule  \vspace{\baselineskip}}
 %---------
 
@@ -108,7 +108,7 @@
 \renewcommand{\thequestioncounter}{\arabic{questioncounter}.\thechapter}
 
 \newenvironment*{سوال}				
-{\noindent\ignorespaces  سوال \refstepcounter{questioncounter} \thequestioncounter :}%
+{\noindent\ignorespaces  سوال \refstepcounter{questioncounter} \thequestioncounter :\quad}%
 {\par\noindent }
 %--------------------
 
@@ -118,7 +118,7 @@
 \renewcommand{\thelawcounter}{\arabic{lawcounter}.\thechapter}
 
 \newenvironment*{قانون}				
-{\par\medskip \refstepcounter{lawcounter} }%
+{\par\medskip \refstepcounter{lawcounter} \quad}%
 {\par\medskip }
 %--------------------
 
