--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -237,7 +237,7 @@ R_o &=0
 \ابتدا{مثال}
 \begin{itemize}
 \item
-جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے مقدار اور حسابی ایمپلیفائر کا غیر کامل مساوی دور (ریاضی نمونہ) استعمال کرتے ہوئے \عددی{v_s=\SI{1}{\volt}} پر  شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں \عددی{v_o} کی قیمت حاصل کریں۔\عددی{R_1=\SI{1}{\kilo \ohm}} اور \عددی{R_1=\SI{10}{\kilo \ohm}} ہیں۔
+جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے مقدار اور حسابی ایمپلیفائر کا غیر کامل مساوی دور (ریاضی نمونہ) استعمال کرتے ہوئے \عددی{v_s=\SI{1}{\volt}} پر  شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں \عددی{v_o} کی قیمت حاصل کریں۔\عددی{R_1=\SI{1}{\kilo \ohm}} اور \عددی{R_2=\SI{10}{\kilo \ohm}} ہیں۔
 \item
 حسابی ایمپلیفائر کا کامل مساوی دور اور جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے گئے \عددی{A_d} کی قیمت استعمال کرتے ہوئے  دوبارہ  \عددی{v_o} کی قیمت حاصل کریں۔
 \item
@@ -252,7 +252,7 @@ R_o &=0
 \end{figure}
 %
 حل:
-شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} الف میں حسابی ایمپلیفائر کا غیر کامل مساوی دور جبکہ شکل  الف     میں اس کا کامل مساوی دور استعمال کرتے ہوئے شکل \حوالہ{شکل_منفی_ایمپلیفائر} کو بنایا گیا ہے۔
+شکل \حوالہ{شکل_حسابی_ماڈل_استعمال}-الف میں حسابی ایمپلیفائر کا غیر کامل مساوی دور جبکہ شکل  \حوالہ{شکل_حسابی_ماڈل_استعمال}-ب     میں اس کا کامل مساوی دور استعمال کرتے ہوئے شکل \حوالہ{شکل_منفی_ایمپلیفائر} کو بنایا گیا ہے۔
 \begin{itemize}
 \item
 شکل-الف میں کرخوف کے قانون برائے برقی رو استعمال کرتے ہوئے
