--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -42,7 +42,9 @@
 
 
 \newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Jameel Noori Nastaleeq}
-\newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{XB Tabriz Bold}
+\setmonofont{DejaVu Sans Mono}                                                                  %had to add this and the next line to get going after ubuntu upgrade
+\let\arabicfontt\ttfamily                                                                                  %had to add this and the above line to get going after ubuntu upgrade
+\newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{AA Sameer Sagar Nastaleeq Bold}
 \newfontfamily\urdufont[Scale=1.25,WordSpace=60.0,Script=Arabic]{Jameel Noori Nastaleeq}
 \setlength{\parskip}{5mm plus 4mm minus 3mm}
 
