--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -1342,7 +1342,7 @@ Z=\frac{r_{b'e}}{s\left(C_{b'e}+C_{b'c} \right ) r_{b'e}+1}
 f_T & \approx \beta f_{\beta}
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔اس مساوات کے تحت \عددی{f_T} دراصل ٹرانزسٹر کے \عددی{\beta} اور \عددی{f_{\beta}} کا حاصل ضرب ہے۔اسی سے \عددی{f_T} کو ٹرانزسٹر کا \اصطلاح{افزائش ضرب دائرہ کارکردگی}\فرہنگ{افزائش ضرب دائرہ کارکردگی}\فرہنگ{\عددی{f_T}}\حاشیہب{gain bandwidth product}\فرہنگ{gain bandwidth product} کہتے ہیں۔ٹرانزسٹر کے بلند تعددی صلاحیت کو اس کے \اصطلاح{معلوماتی صفحات}\حاشیہب{data sheet} میں بطور \عددی{f_T} پیش کیا جاتا ہے۔یوں کسی بھی اشارے کو بڑھانے کی خاطر استعمال کئے جانے والے ایمپلیفائر کے ٹرانزسٹر کی \عددی{f_T} اس اشارے کی تعدد سے زیادہ ہونا ضروری ہے۔مندرجہ بالا مساوات کو یوں دیکھا جا سکتا ہے کہ اگر دو مختلف ٹرانزسٹروں کی \عددی{f_T} برابر جبکہ ان کے \عددی{\beta} برابر نہ ہوں تب کم \عددی{\beta} والے ٹرانزسٹر کا \عددی{f_{\beta}} زیادہ ہو گا اور یوں یہ نسبتاً زیادہ بلند تعدد کے اشارات کو بڑھانے کی صلاحیت رکھے گا۔
+لکھا جا سکتا ہے۔اس مساوات کے تحت \عددی{f_T} دراصل ٹرانزسٹر کے \عددی{\beta} اور \عددی{f_{\beta}} کا حاصل ضرب ہے۔اسی سے \عددی{f_T} کو ٹرانزسٹر کا \اصطلاح{افزائش ضرب دائرہ کارکردگی}\فرہنگ{افزائش ضرب دائرہ کارکردگی}\حاشیہب{gain bandwidth product}\فرہنگ{gain bandwidth product} کہتے ہیں۔ٹرانزسٹر کے بلند تعددی صلاحیت کو اس کے \اصطلاح{معلوماتی صفحات}\حاشیہب{data sheet} میں بطور \عددی{f_T} پیش کیا جاتا ہے۔یوں کسی بھی اشارے کو بڑھانے کی خاطر استعمال کئے جانے والے ایمپلیفائر کے ٹرانزسٹر کی \عددی{f_T} اس اشارے کی تعدد سے زیادہ ہونا ضروری ہے۔مندرجہ بالا مساوات کو یوں دیکھا جا سکتا ہے کہ اگر دو مختلف ٹرانزسٹروں کی \عددی{f_T} برابر جبکہ ان کے \عددی{\beta} برابر نہ ہوں تب کم \عددی{\beta} والے ٹرانزسٹر کا \عددی{f_{\beta}} زیادہ ہو گا اور یوں یہ نسبتاً زیادہ بلند تعدد کے اشارات کو بڑھانے کی صلاحیت رکھے گا۔
 
 مساوات \حوالہ{مساوات_تعددی_ردعمل_افزائش_ضرب_دائرہ} اور مساوات \حوالہ{مساوات_تعددی_ردعمل_بلند_انقطاعی_بیٹا_تعدد} کو ملاتے ہوئے اور  \عددی{\beta=g_m r_{b'e}} لکھتے ہوئے
 \begin{gather}
