--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -1915,14 +1915,41 @@ V_{OS}&=\frac{V_O}{A_d}=- 2 \Delta V_t
 \عددیء{\Delta R_S} اور \عددی{\Delta \left(\tfrac{W}{L} \right)} کی وجہ سے پیدا \عددیء{V_{OS}} کو کم رکھنے کی خاطر ماسفیٹ کو کم سے کم \عددیء{\left(V_{GS}-V_t \right)} پر چلایا جاتا ہے۔دو جوڑ ٹرانزسٹر کے تفرقی جوڑے میں داخلی انحرافی برقی دباو دونوں بازووں  کے \عددی{R_C} میں فرق اور دونوں ٹرانزسٹروں کے \عددی{I_S} میں فرق کی بنا پر پیدا ہوتا ہے۔ماسفیٹ کے تفرقی جوڑے میں داخلی انحرافی برقی دباو پیدا کرنے کی تیسری وجہ \عددی{V_t} بھی پائی جاتی ہے۔
 %===================
 \حصہ{ماسفیٹ آئینہ برقی رو}
-شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں ماسفیٹ کا سادہ آئینہ برقی رو دکھایا گیا ہے جس کو دیکھتے ہی ہم کہہ سکتے ہیں کہ \عددیء{R_o=r_{o2}} کے برابر ہے۔آئیں یہی نتیجہ ماسفیٹ ریاضی نمونہ استعمال کرتے ہوئے حاصل کریں۔خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کے ڈرین پر باریک اشاراتی \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا تخمینہ لگا کر \عددیء{\tfrac{v_t}{i_t}} سے خارجی مزاحمت \عددیء{R_o} حاصل کیا جا سکتا ہے۔
+شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں ماسفیٹ کا سادہ آئینہ برقی رو دکھایا گیا ہے جس کو دیکھتے ہی ہم کہہ سکتے ہیں کہ \عددیء{R_o=r_{o}} کے برابر ہے۔آئیں یہی نتیجہ ماسفیٹ ریاضی نمونہ استعمال کرتے ہوئے حاصل کریں۔خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کے ڈرین پر باریک اشاراتی \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا تخمینہ لگا کر \عددیء{\tfrac{v_t}{i_t}} سے خارجی مزاحمت \عددیء{R_o} حاصل کیا جا سکتا ہے۔
 \begin{figure}
 \centering
-\includegraphics[scale=0.90]{mosfetSimpleCurrentMirror}
+\begin{subfigure}{0.4\textwidth}
+\centering
+\begin{tikzpicture}
+\draw (0,0) node[nmos,anchor=source,xscale=-1](Q1){}
+      ++(\x,0) node[nmos,anchor=source,xscale=1](Q2){};
+\draw(Q1.gate)--(Q2.gate);
+\draw(Q1.gate)node[below]{$V_G$}node[circ]{}|-(Q1.drain)node[circ]{};
+\draw (Q1.source)node[right]{$Q1$} (Q2.source)node[left]{$Q2$};
+\draw(Q1.source)to [short,-o]++(0,-0.5){}node[below]{$V_{EE}$};
+\draw(Q2.source) to [short,-o]++(0,-0.5){}node[below]{$V_{EE}$};
+\draw(Q1.drain) to [american current source,invert]++(0,\y) to [short,-o]++(0,0.25)node[right]{$V_{DD}$};
+\draw(Q2.drain) to [short,-o]++(1,0);
+\draw(Q2.drain)++(0.5,-0.25) to [R,/tikz/circuitikz/bipoles/length=20pt,l={$r_0$}]++(0,-1);
+\draw[latex-,thick](Q2.drain)++(0.25,-0.5)--++(0,0.35)--++(1,0)node[right]{$R_0$};
+\draw[dashed](Q2.drain) --++(0,1);
+\end{tikzpicture}
+\caption{}
+\end{subfigure}\hfill
+\begin{subfigure}{0.55\textwidth}
+\centering
+\begin{tikzpicture}
+\draw(0,0)node[ground]{} to[american controlled current source,invert,l_={$g_mv_{gs}$}]++(0,\y)to [short]++(\x,0)coordinate(kR) to [R,l={$r_0$}]++(0,-\y) node[ground]{};
+\draw(kR) to [short,*-,i<={$i_t$}]++(\x,0) to [american voltage source,invert,l={$v_t$}]++(0,-\y) node[ground]{};
+\draw(-2,0)node[ground]{} to [short]++(0,\y) to [short]++(1,0)coordinate(kT);
+\draw(kT)++(0,-0.5*\y)node[align=center]{$+$\\  $ v_{gs}$\\   $-$};
+\end{tikzpicture}
+\caption{}
+\end{subfigure}
 \caption{سادہ آئینے کی خارجی مزاحمت}
 \label{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
-شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں دونوں ٹرانزسٹر کے ریاضی نمونہ استعمال کرتے ہوئے مساوی باریک اشاراتی مساوی دور بھی دکھایا گیا ہے۔\عددیء{v_t} کی عدم موجودگی میں دونوں ٹرانزسٹر کے \عددیء{v_{be}=\SI{0}{\volt}} رہتے ہیں جس  کی بنا پر دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}} ہوں گے۔\عددیء{v_t} لاگو کرنے سے دونوں ٹرانزسٹروں کے \عددیء{v_{be}} پر برقی دباو تبدیل نہیں ہوتا لہٰذا اب بھی دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}}  ہی ہوں گے۔اس طرح \عددیء{i_t=\tfrac{v_t}{r_{02}}} ہو گا جس سے \عددیء{R_o=r_{02}} حاصل ہوتا ہے۔
+شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ا  میں   \عددی{V_G} یک سمتی رو دباو ہے لہٰذا دور کا ریاضی نمونہ بناتے ہوئے ہم \عددی{Q_2} کا پائے نمونہ استعمال کرتے ہوئے اس کے گیٹ کو (باریک اشاراتی استعمال کے لئے) برقی زمین پر تصور کرتے ہیں (شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ب)۔ یوں \عددی{g_mv_{gs}=0} ہو گا لہٰذا \عددی{v_t=i_tr_0} یعنی  \عددی{R_0=\tfrac{v_t}{i_t}=r_0}   ہو گا۔
 
 جیسے آپ جانتے ہیں کہ آئینے کی خارجی مزاحمت جتنی زیادہ ہو اتنا بہتر ہے۔آئیں ماسفیٹ کے ولسن آئینے پر غور کریں اور دیکھیں کہ اس کی خارجی مزاحمت کتنی حاصل ہوتی ہے۔
 \begin{figure}
