--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -226,7 +226,7 @@ R_o &=0
 \end{aligned}
 \end{gather}
 ایسا کرتے وقت \عددی{\approx} اور\عددی{\to} کے علامات کی جگہ \عددی{=}کی علامت استعمال کی گئی ہے۔ان مساوات کے پہلے جزو میں خطی خطہ لکھ کر اس بات کی یاد دہانی کرائی جاتی ہے کہ داخلی سرے صرف اس صورت برابر برقی دباو پر رہتے ہیں جب تک ایمپلیفائر خطی خطے میں رہے۔اس بات کی وضاحت مثال \حوالہ{مثال_حسابی_خطی_غیر_خطی_خطے} میں ہو گی۔ان مساوات کو مد نظر رکھتے ہوئے ہم شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور}  کو دوبارہ بناتے ہیں۔ایسا کرنے سے شکل \حوالہ{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور} حاصل ہوتا ہے جو کہ \اصطلاح{کامل} حسابی ایمپلیفائر\فرہنگ{کامل حسابی ایمپلیفائر}\حاشیہب{ideal} کا مساوی دور یا \اصطلاح{ریاضی نمونہ}\فرہنگ{ریاضی نمونہ}\فرہنگ{نمونہ!ریاضی}\حاشیہب{model}\فرہنگ{model}  ہے۔
-\begin{figure} \label{شکل_حسابی_کامل_ماڈل}
+\begin{figure}
 \centering
 \includegraphics[scale=0.90]{idealOpampEquivalentCircuit}
 \caption{کامل حسابی ایمپلیفائر کا مساوی دور یا ریاضی نمونہ}
@@ -1280,7 +1280,7 @@ v_0&=\left( 1+\frac{R_0}{R_m}\right)\left(\frac{R_j }{R_{j1}}v_{j1}+\frac{R_j }{
 
 ان حساس اشارات کے حصول کے لئے زیادہ سے زیادہ \اصطلاح{داخلی برقی رکاوٹ}\فرہنگ{داخلی برقی رکاوٹ}\حاشیہب{input impedance}  والے ادوار استعمال کئے جاتے ہیں۔ایسے جگہوں پر عموماً \اصطلاح{آلاتی ایمپلیفائر} استعمال کیا جاتا ہے جس کا داخلی برقی رکاوٹ لامحدود تصور کیا جا سکتا ہے۔آلاتی ایمپلیفائر  کو شکل \حوالہ{شکل_آلاتی_ایمپلیفائر} میں دکھایا گیا ہے۔
 
-\begin{figure} \label{شکل_حسابی_آلاتی_ایمپلیفائر}
+\begin{figure}
 \centering
 \includegraphics[scale=0.90]{instrumentationAmplifier}
 \caption{آلاتی ایمپلیفائر}
@@ -1993,7 +1993,7 @@ A=\num{60000} \hspace{5mm} R_i=\SI{100}{\mega \ohm} \hspace{5mm} R_o=\SI{200}{\o
 
 %==============================
 \ابتدا{سوال}
-مال لادنے سے پہلے اور لادنے کے بعد ٹرک کا وزن   کرتے ہوئے لدے گئے مال کا وزن حاصل کیا جاتا ہے۔ٹرک کا وزن ناپنے کی خاطر \اصطلاح{لوڈ سیل}\فرہنگ{لوڈ سیل}\حاشیہب{load cell} استعمال کیا جاتا ہے جو در حقیقت \اصطلاح{ویٹ سٹون چکور}\فرہنگ{ویٹ سٹون چکور}\حاشیہب{Wheatstone bridge} پر مشتمل ہوتا ہے۔\اصطلاح{ویٹ سٹون چکور}\حاشیہد{ویٹ سٹون چکور کا نام چارلس ویٹ سٹون سے منسوخ ہے جنہوں نے اس کا استعمال عام بنایا} کو شکل \حوالہ{شکل__سوال_ویٹ_سٹون_چکور} میں دکھایا گیا ہے۔عام صورت میں اس کے چاروں مزاحمتوں کی قیمت برابر \عددی{R} ہوتی ہے۔وزن پڑنے پر ان میں سے ایک مزاحمت کی مزاحمت تبدیل ہو کر \عددی{R+\Delta R} ہو جاتی ہے۔ویٹ سٹون چکور سے اشارات \عددی{V_1} اور \عددی{V_2} حاصل کرتے ہوئے آلاتی ایمپلیفائر کو مہیا کئے جاتے ہیں جو ان میں نہایت باریک فرق \عددی{V_2-V_1} کو بڑھا کر خارج کرتا ہے۔ویٹ سٹون چکور کو آلاتی ایمپلیفائر کے ساتھ جوڑ کر خارجی اشارہ \عددی{v_o} کی مساوات حاصل کریں۔آلاتی ایمپلیفائر کو  صفحہ  \pageref{شکل_حسابی_آلاتی_ایمپلیفائر} پر شکل \حوالہ{شکل_حسابی_آلاتی_ایمپلیفائر} میں دکھایا گیا ہے۔
+مال لادنے سے پہلے اور لادنے کے بعد ٹرک کا وزن   کرتے ہوئے لدے گئے مال کا وزن حاصل کیا جاتا ہے۔ٹرک کا وزن ناپنے کی خاطر \اصطلاح{لوڈ سیل}\فرہنگ{لوڈ سیل}\حاشیہب{load cell} استعمال کیا جاتا ہے جو در حقیقت \اصطلاح{ویٹ سٹون چکور}\فرہنگ{ویٹ سٹون چکور}\حاشیہب{Wheatstone bridge} پر مشتمل ہوتا ہے۔\اصطلاح{ویٹ سٹون چکور}\حاشیہد{ویٹ سٹون چکور کا نام چارلس ویٹ سٹون سے منسوخ ہے جنہوں نے اس کا استعمال عام بنایا} کو شکل \حوالہ{شکل__سوال_ویٹ_سٹون_چکور} میں دکھایا گیا ہے۔عام صورت میں اس کے چاروں مزاحمتوں کی قیمت برابر \عددی{R} ہوتی ہے۔وزن پڑنے پر ان میں سے ایک مزاحمت کی مزاحمت تبدیل ہو کر \عددی{R+\Delta R} ہو جاتی ہے۔ویٹ سٹون چکور سے اشارات \عددی{V_1} اور \عددی{V_2} حاصل کرتے ہوئے آلاتی ایمپلیفائر کو مہیا کئے جاتے ہیں جو ان میں نہایت باریک فرق \عددی{V_2-V_1} کو بڑھا کر خارج کرتا ہے۔ویٹ سٹون چکور کو آلاتی ایمپلیفائر کے ساتھ جوڑ کر خارجی اشارہ \عددی{v_o} کی مساوات حاصل کریں۔آلاتی ایمپلیفائر کو  صفحہ  \pageref{شکل_آلاتی_ایمپلیفائر} پر شکل \حوالہ{شکل_آلاتی_ایمپلیفائر} میں دکھایا گیا ہے۔
 
 \begin{figure}
 \centering
@@ -2054,7 +2054,7 @@ v_o=\frac{\Delta R}{4 \left(R+\frac{\Delta R}{2} \right)} \left(\frac{R_4}{R_3}\
 لامحدود \عددی{A_d} کی صورت میں منفی حسابی ایمپلیفائر کی \عددی{A_v=-\tfrac{R_2}{R_1}} حاصل ہوتی ہے۔
 \begin{itemize}
 \item
-محدود  \عددی{A_d} کی صورت میں صفحہ \حوالہصفحہ{شکل_حسابی_کامل_ماڈل} پر شکل \حوالہ{شکل_حسابی_کامل_ماڈل} میں دیے  کامل مساوی دور استعمال کرتے ہوئے \عددی{A_v} حاصل کریں۔ 
+محدود  \عددی{A_d} کی صورت میں صفحہ \حوالہصفحہ{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور} پر شکل \حوالہ{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور} میں دیے  کامل مساوی دور استعمال کرتے ہوئے \عددی{A_v} حاصل کریں۔ 
 \item
 لامحدود \عددی{A_d} کے جواب کی نسبت سے \عددی{A_v} میں غلطی کا فی صد حاصل کریں۔
 \item
