--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -30,6 +30,9 @@
 \usepackage{makeidx}                %  \makeindex 
 \usepackage{placeins}                   % \FloatBarrier
 
+\usepackage{caption}                               %must be placed before bidi
+\usepackage{subcaption}
+
 %\usepackage{hyperref}                   %loaded second last just before polyglossia. still giving problems
 \usepackage{polyglossia}                %is loaded the last
 
